--- a/algoritmi/ricerca/ricerca_lineare.html
+++ b/algoritmi/ricerca/ricerca_lineare.html
@@ -66,7 +66,7 @@ il valore non è presente nella sequenza.</p>
 <h3>In Python</h3>
 <pre><code class="python" algo="ricerca_lineare_iterativa"></code></pre>
 <h4>Traccia dell’esecuzione</h4>
-<div class="pytutorVisualizer" data-tracefile="./tracce/ricerca_lineare_iterativa_tracce.json" data-params="{'embeddedMode': true,'startingInstruction': 5}"> </div>
+<div class="pytutorVisualizer" data-tracefile="./tracce/ricerca_lineare_iterativa_tracce.json" data-params='{"embeddedMode": true,"startingInstruction": 5}' id="ricerca_lineare_iterativa_tracce"> </div>
 <h2>Realizzazione ricorsiva</h2>
 <h3>In pseudo-codice</h3>
 <pre><code class="pseudo" algo="ricerca_lineare_ricorsiva"></code></pre>
@@ -77,7 +77,7 @@ il valore non è presente nella sequenza.</p>
 <h3>In Python</h3>
 <pre><code class="python" algo="ricerca_lineare_ricorsiva"></code></pre>
 <h4>Traccia dell’esecuzione</h4>
-<div class="pytutorVisualizer" data-tracefile="./tracce/ricerca_lineare_ricorsiva_tracce.json" data-params="{'embeddedMode': true, 'startingInstruction': 5}" style="width=400px; height=600px"> </div>
+<div class="pytutorVisualizer" data-tracefile="./tracce/ricerca_lineare_ricorsiva_tracce.json" data-params="{'embeddedMode': true, 'startingInstruction': 5}" style="width=400px; height=600px" id="ricerca_lineare_ricorsiva_tracce"> </div>
 <h2>Complessità computazionale</h2>
 <h3>Caso migliore</h3>
 <p>Numero confronti: 1</p>
@@ -97,20 +97,15 @@ document.querySelectorAll('pre > code').forEach(function (e) {
 algos.forEach(function (algo) {
     [{ lang: 'pseudo', ext: 'pseudo' }, { lang: 'javascript', ext: 'js' }, { lang: 'python', ext: 'py' }].forEach(function (impl) {
         var filename = algo + '.' + impl.ext;
-        var xhr = new XMLHttpRequest();
         var url = './codice/' + filename;
-        xhr.open('GET', url);
-        xhr.onload = function() {
-           if (xhr.status === 200) {
-               var sel = 'code[algo="' + algo + '"][class="' + impl.lang + '"]';
-               var elem = document.querySelector(sel);
-               elem.innerHTML = xhr.responseText;
-               hljs.highlightBlock(elem);
-            } else {
-                alert('Request failed.  Returned status of ' + xhr.status);
-            }
-        };
-        xhr.send();
+        fetch(url).then(function(response) {
+            return response.text();
+          }).then(function(src) {
+            var sel = 'code[algo="' + algo + '"][class="' + impl.lang + '"]';
+            var elem = document.querySelector(sel);
+            elem.innerText = src;
+            hljs.highlightBlock(elem);
+       });
     });
 });
 // Tracce con OPT
