--- a/algoritmi/ricerca/ricerca_indicizzata.html
+++ b/algoritmi/ricerca/ricerca_indicizzata.html
@@ -38,7 +38,7 @@
 <h1>Ricerca indicizzata con accesso diretto</h1>
 <h2>Problema</h2>
 <p>Determinare se un valore \( v \) dato è presente in una sequenza \( A \) di \( n \) valori. Se il valore \( v \) è presente, restituirne
-la posizione, nota la distribuzione dei valori e determinata una funzione \( h(v) \) che produce valori interi.</p>
+la posizione, nota la distribuzione dei valori e determinata una funzione d’indicizzazione \( h(v) \) che produce valori interi.</p>
 <h3>Input</h3>
 <p>Una sequenza \( A \) di \( n \) valori, \( A = [a_1, a_2, \ldots, a_n] \) e un valore \( v \).</p>
 <h3>Output</h3>
@@ -49,17 +49,75 @@ speciale che indica che \( v \) non compare nella sequenza \( A \).</p>
 <h4>Input</h4>
 <p>La sequenza \( A = [Cip, Gastone, Minnie, Pluto, Topolino ] \) di \( n = 5 \) elementi e il valore \( v = Pluto \).
 Sia data anche una procedura \( h \) che dato un valore di tipo stringa \( [c_1, c_2, \ldots, c_k_v]\) restituisce il numero intero dato da:</p>
-<pre><code>sia posizione := posizione del primo carattere di v
-sia indice_frazionario := posizione / 4
-restituisci il valore arrotondato all'intero più vicino di indice_frazionario
+<pre><code>h (v):
+    sia posizione := posizione nell'alfabeto del primo carattere di v
+    sia indice := (posizione + 1) / 4
+    restituisci l'indice
 </code></pre>
+<p>Si noti l’applicazione della procedura h ai valori della sequenza:</p>
+<table>
+<thead>
+<tr>
+<th>Valore</th>
+<th>Primo carattere</th>
+<th>Indice alfabeto</th>
+<th>h (Valore)</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Cip</td>
+<td>C</td>
+<td>3</td>
+<td>1</td>
+</tr>
+<tr>
+<td>Gastone</td>
+<td>G</td>
+<td>7</td>
+<td>2</td>
+</tr>
+<tr>
+<td>Minnie</td>
+<td>M</td>
+<td>13</td>
+<td>3</td>
+</tr>
+<tr>
+<td>Pluto</td>
+<td>P</td>
+<td>16</td>
+<td>4</td>
+</tr>
+<tr>
+<td>Topolino</td>
+<td>T</td>
+<td>20</td>
+<td>5</td>
+</tr>
+</tbody>
+</table>
 <h4>Output</h4>
-<p>L’indice \( i = 4 \) tale che \( a_4 \) è l’elemento \( “Pluto” \).</p>
+<p>L’indice \( i = 4 \) tale che \( a_4 \) è l’elemento \( Pluto \).</p>
 <h2>Algoritmo di ricerca indicizzata con accesso diretto</h2>
 <p>L’algoritmo di ricerca indicizzata con accesso diretto consiste nella produzione del
-valore dell’indice a partire dal valore stesso.
+valore dell’indice a partire dal valore stesso e nella verifica della presenza del
+valore nella posizione prevista.
 Se il valore è nella posizione dell’indice, allora restituisci l’indice, altrimenti
 <code>NON_PRESENTE</code> per indicare che il valore non è presente nella sequenza.</p>
+<h3>Discussione sulla funzione di indicizzazione</h3>
+<p>Nel caso d’esempio la funzione d’indicizzazione produce valori interi nell’intervallo [1, 5].
+La sequenza è composta da 5 elementi e non presenta “buchi”. L’ordinamento dei valori resta
+lo stesso dei valori.</p>
+<p>Se la sequenza di valori è nota a priori, può essere possibile determinare funzioni che
+mappa ogni elemento in un numero intero tra 1 e \( n \), dove ((n \)) è il numero di
+elementi della sequenza stessa. Tale funzione si chiama <em>hash perfetta minimale</em>.</p>
+<p>Se la funzione mappa ogni elemento in un intero tra 1 e \( m \), dove \( m &gt; n \) allora
+la funzione è <em>hash perfetta</em> ma non è <em>minimale</em>.</p>
+<p>Se \( v_i \leq v_j \implies h(v_i) \leq h(v_j) \) allora si dice che la funzione hash
+_preserva l’ordinamento.</p>
+<p>La funzione d’indicizzazione dell’esempio è quindi: <em>perfetta</em>, <em>mininale</em> e
+<em>preserva l’ordinamento</em>.</p>
 <h2>Realizzazione iterativa</h2>
 <h3>In pseudo-codice</h3>
 <pre><code class="pseudo" algo="ricerca_indicizzata_esempio"></code></pre>
