--- a/appunti/algoritmi/ricerca/ricerca_lineare.html
+++ b/appunti/algoritmi/ricerca/ricerca_lineare.html
@@ -35,62 +35,63 @@
 </head>
 
 <body>
-<h1>Ricerca lineare</h1>
-<h2>Problema</h2>
+<h1 id="ricerca-lineare">Ricerca lineare</h1>
+<p><div class="table-of-contents"><ul><li><a href="#ricerca-lineare">Ricerca lineare</a><ul><li><a href="#problema">Problema</a><ul><li><a href="#input">Input</a></li><li><a href="#output">Output</a></li><li><a href="#esempio">Esempio</a><ul><li><a href="#input">Input</a></li><li><a href="#output">Output</a></li></ul></li></ul></li><li><a href="#algoritmo-di-ricerca-lineare">Algoritmo di ricerca lineare</a></li><li><a href="#realizzazione-iterativa">Realizzazione iterativa</a><ul><li><a href="#in-pseudo-codice">In pseudo-codice</a></li><li><a href="#come-diagramma-di-flusso-di-esecuzione">Come diagramma di flusso (di esecuzione)</a></li><li><a href="#in-javascript">In JavaScript</a></li><li><a href="#in-python">In Python</a><ul><li><a href="#traccia-dellesecuzione">Traccia dell'esecuzione</a></li></ul></li></ul></li><li><a href="#realizzazione-ricorsiva">Realizzazione ricorsiva</a><ul><li><a href="#in-pseudo-codice">In pseudo-codice</a></li><li><a href="#come-diagramma-di-flusso">Come diagramma di flusso</a></li><li><a href="#in-javascript">In JavaScript</a></li><li><a href="#in-python">In Python</a><ul><li><a href="#traccia-dellesecuzione">Traccia dell'esecuzione</a></li></ul></li></ul></li><li><a href="#complessita-computazionale">Complessità computazionale</a><ul><li><a href="#caso-migliore">Caso migliore</a></li><li><a href="#caso-peggiore">Caso peggiore</a></li><li><a href="#caso-medio">Caso medio</a></li></ul></li></ul></li></ul></div></p>
+<h2 id="problema">Problema</h2>
 <p>Determinare se un valore \( v \) dato è presente in una sequenza \( A \) di \( n \) valori. Se il valore \( v \) è presente, restituirne
 la posizione.</p>
-<h3>Input</h3>
+<h3 id="input">Input</h3>
 <p>Una sequenza \( A \) di \( n \) valori, \( A = [a_1, a_2, \ldots, a_n] \) e un valore \( v \).</p>
-<h3>Output</h3>
+<h3 id="output">Output</h3>
 <p>Un indice \( i \) tale che l’elemento in posizione \( i \)-esima
 della sequenza, \( a_i \) sia uguale a \( v \), oppure un valore
 speciale che indica che \( v \) non compare nella sequenza \( A \).</p>
-<h3>Esempio</h3>
-<h4>Input</h4>
+<h3 id="esempio">Esempio</h3>
+<h4 id="input-2">Input</h4>
 <p>La sequenza \(A = [5, 1, 4, 2, 3] \) di \( n = 5 \) elementi e il valore \( v = 2 \)</p>
-<h4>Output</h4>
+<h4 id="output-2">Output</h4>
 <p>L’indice \( i = 4 \) tale che \( a_4 \) è l’elemento \( 2 \).</p>
-<h2>Algoritmo di ricerca lineare</h2>
+<h2 id="algoritmo-di-ricerca-lineare">Algoritmo di ricerca lineare</h2>
 <p>L’algoritmo di ricerca lineare consiste nella scansione dei valori della
 sequenza, partendo dal primo elemento e terminando o quando si incontra
 il valore cercato o quando la sequenza termina. Usa <code>NON_PRESENTE</code> per indicare che
 il valore non è presente nella sequenza.</p>
-<h2>Realizzazione iterativa</h2>
-<h3>In pseudo-codice</h3>
+<h2 id="realizzazione-iterativa">Realizzazione iterativa</h2>
+<h3 id="in-pseudo-codice">In pseudo-codice</h3>
 <pre><code class="pseudo" algo="ricerca_lineare_iterativa"></code></pre>
-<h3>Come diagramma di flusso (di esecuzione)</h3>
+<h3 id="come-diagramma-di-flusso-di-esecuzione">Come diagramma di flusso (di esecuzione)</h3>
 <p><img src="./codice/ricerca_lineare_iterativa.fc.svg" alt=""></p>
 <!--![](https://code2flow.com/Hrzixh.svg)-->
-<h3>In JavaScript</h3>
+<h3 id="in-javascript">In JavaScript</h3>
 <pre><code class="javascript" algo="ricerca_lineare_iterativa"></code></pre>
-<h3>In Python</h3>
+<h3 id="in-python">In Python</h3>
 <pre><code class="python" algo="ricerca_lineare_iterativa"></code></pre>
-<h4>Traccia dell’esecuzione</h4>
-<div class="pytutorVisualizer" data-tracefile="./tracce/ricerca_lineare_iterativa_tracce.json" data-params='{"embeddedMode": true,"startingInstruction": 5}' id="ricerca_lineare_iterativa_tracce"> </div>
-<h2>Realizzazione ricorsiva</h2>
-<h3>In pseudo-codice</h3>
+<h4 id="traccia-dellesecuzione">Traccia dell’esecuzione</h4>
+<div class="pytutorVisualizer" data-tracefile="./tracce/ricerca_lineare_iterativa_tracce.json" data-params="{'embeddedMode': true" id="ricerca_lineare_iterativa_tracce"> </div>
+<h2 id="realizzazione-ricorsiva">Realizzazione ricorsiva</h2>
+<h3 id="in-pseudo-codice-2">In pseudo-codice</h3>
 <pre><code class="pseudo" algo="ricerca_lineare_ricorsiva"></code></pre>
-<h3>Come diagramma di flusso</h3>
+<h3 id="come-diagramma-di-flusso">Come diagramma di flusso</h3>
 <p><img src="./codice/ricerca_lineare_ricorsiva.fc.svg" alt=""></p>
-<h3>In JavaScript</h3>
+<h3 id="in-javascript-2">In JavaScript</h3>
 <pre><code class="javascript" algo="ricerca_lineare_ricorsiva"></code></pre>
-<h3>In Python</h3>
+<h3 id="in-python-2">In Python</h3>
 <pre><code class="python" algo="ricerca_lineare_ricorsiva"></code></pre>
-<h4>Traccia dell’esecuzione</h4>
-<div class="pytutorVisualizer" data-tracefile="./tracce/ricerca_lineare_ricorsiva_tracce.json" data-params="{'embeddedMode': true, 'startingInstruction': 5}" style="width=400px; height=600px" id="ricerca_lineare_ricorsiva_tracce"> </div>
-<h2>Complessità computazionale</h2>
-<h3>Caso migliore</h3>
+<h4 id="traccia-dellesecuzione-2">Traccia dell’esecuzione</h4>
+<div class="pytutorVisualizer" data-tracefile="./tracce/ricerca_lineare_ricorsiva_tracce.json" data-params='{"embeddedMode": true, "jumpToEnd": true' id="ricerca_lineare_ricorsiva_tracce"> </div>
+<h2 id="complessita-computazionale">Complessità computazionale</h2>
+<h3 id="caso-migliore">Caso migliore</h3>
 <p>Numero confronti: 1</p>
-<h3>Caso peggiore</h3>
+<h3 id="caso-peggiore">Caso peggiore</h3>
 <p>Numero confronti: \( n \)</p>
-<h3>Caso medio</h3>
+<h3 id="caso-medio">Caso medio</h3>
 <p>Numero confronti: \( \frac{1+2+3+\cdots+n}{n} = \frac{(1+n)\cdot n}{2 \cdot n} = \frac{1+n}{2} \)</p>
 
     <script>
 renderMathInElement(document.body);
 var algos = [];
 document.querySelectorAll('pre > code').forEach(function (e) {
-  if (algos.indexOf(e.attributes['algo'].value) == -1) {
+  if (e.attributes['algo'] && algos.indexOf(e.attributes['algo'].value) == -1) {
     algos.push(e.attributes['algo'].value);
   }
 });
