--- a/appunti/algoritmi/ricerca/ricerca_binaria.html
+++ b/appunti/algoritmi/ricerca/ricerca_binaria.html
@@ -22,8 +22,8 @@
     <!-- Online Python Tutor -->
     <!--script type="text/javascript" src="http://pythontutor.com/build/pytutor-embed.bundle.js" charset="utf-8"></script-->
     <script type="text/javascript" src="../../lib/pytutor-embed.bundle.js" charset="utf-8"></script>
-    
-    <title></title>
+
+    <title>Ricerca binaria</title>
 
     <style>
         tr,
@@ -35,8 +35,10 @@
 </head>
 
 <body>
-<h1>Ricerca binaria</h1>
-<h2>Problema</h2>
+<h1 id="ricerca-binaria">Ricerca binaria</h1>
+<h2 id="indice">Indice</h2>
+<p><div class="table-of-contents"><ul><li><a href="#ricerca-binaria">Ricerca binaria</a><ul><li><a href="#indice">Indice</a></li><li><a href="#problema">Problema</a><ul><li><a href="#input">Input</a></li><li><a href="#output">Output:</a></li><li><a href="#esempio">Esempio</a><ul><li><a href="#input">Input</a></li><li><a href="#output">Output</a></li></ul></li></ul></li><li><a href="#algoritmo-di-ricerca-binaria">Algoritmo di ricerca binaria</a></li><li><a href="#realizzazione-iterativa">Realizzazione iterativa</a><ul><li><a href="#in-pseudo-codice">In pseudo-codice</a></li><li><a href="#come-diagramma-di-flusso-di-esecuzione">Come diagramma di flusso (di esecuzione)</a></li><li><a href="#in-javascript">In JavaScript</a></li><li><a href="#in-python">In Python</a><ul><li><a href="#traccia-dellesecuzione">Traccia dell'esecuzione</a></li></ul></li></ul></li><li><a href="#realizzazione-ricorsiva">Realizzazione ricorsiva</a><ul><li><a href="#in-pseudo-codice">In pseudo-codice</a></li><li><a href="#come-diagramma-di-flusso">Come diagramma di flusso</a></li><li><a href="#in-javascript">In JavaScript</a></li><li><a href="#in-python">In Python</a><ul><li><a href="#traccia-dellesecuzione">Traccia dell'esecuzione</a></li></ul></li></ul></li><li><a href="#complessita">Complessità</a><ul><li><a href="#caso-migliore">Caso migliore</a></li><li><a href="#caso-peggiore">Caso peggiore</a></li><li><a href="#caso-medio">Caso medio</a></li></ul></li></ul></li></ul></div></p>
+<h2 id="problema">Problema</h2>
 <p>Determinare se un valore  \( v \) dato è presente in una sequenza
 <strong>ordinata</strong>  \( A \)  di  \( n \) valori. Se il valore  \( v \) è presente,
 restituirne la posizione.</p>
@@ -44,79 +46,80 @@ restituirne la posizione.</p>
 non maggiore di quello di destra.
 Formalmente, una sequenza \( A = [a_1, a_2, \ldots, a_n] \) è ordinata se
 \( a_i \leq a_{i+1} \) per \( i = 1, 2, \ldots, n - 1 \).</p>
-<h3>Input</h3>
+<h3 id="input">Input</h3>
 <p>Una sequenza ordinata \( A \) di \( n \) valori, \( A = [a_1, a_2, \ldots, a_n] \) e un valore \( v \).</p>
-<h3>Output:</h3>
+<h3 id="output">Output:</h3>
 <p>Un indice \( i \) tale che l’elemento in posizione \( i \)-esima
 della sequenza, \( a_i \) sia uguale a \( v \), oppure un valore
 speciale che indica che \( v \) non compare nella sequenza \( A \).</p>
-<h3>Esempio</h3>
-<h4>Input</h4>
+<h3 id="esempio">Esempio</h3>
+<h4 id="input-2">Input</h4>
 <p>La sequenza \(A = [1, 2, 3, 5, 7, 11, 13, 17] \) di \( n = 8 \) elementi e il valore \( v = 5 \)</p>
-<h4>Output</h4>
+<h4 id="output-2">Output</h4>
 <p>L’indice \( i = 4 \) tale che \( a_4 \) è l’elemento \( 5 \).</p>
-<h2>Algoritmo di ricerca binaria</h2>
+<h2 id="algoritmo-di-ricerca-binaria">Algoritmo di ricerca binaria</h2>
 <p>L’algoritmo di ricerca binaria consiste cercare un dato valore al centro
 di un intervallo che potrebbe includerlo. Se il valore dato è al centro,
 allora restituisce l’indice, altrimenti se il valore cercato è minore del
 valore nel centro ripete la ricerca nella sotto-sequenza a sinistra del centro,
 altrimenti nella sotto-sequenza di destra.</p>
-<h2>Realizzazione iterativa</h2>
-<h3>In pseudo-codice</h3>
+<h2 id="realizzazione-iterativa">Realizzazione iterativa</h2>
+<h3 id="in-pseudo-codice">In pseudo-codice</h3>
 <pre><code class="pseudo" algo="ricerca_binaria_iterativa"></code></pre>
-<h3>Come diagramma di flusso (di esecuzione)</h3>
+<h3 id="come-diagramma-di-flusso-di-esecuzione">Come diagramma di flusso (di esecuzione)</h3>
 <p><img src="./codice/ricerca_binaria_iterativa.fc.svg" alt=""></p>
 <!--![](https://code2flow.com/Hrzixh.svg)-->
-<h3>In JavaScript</h3>
+<h3 id="in-javascript">In JavaScript</h3>
 <pre><code class="javascript" algo="ricerca_binaria_iterativa"></code></pre>
-<h3>In Python</h3>
+<h3 id="in-python">In Python</h3>
 <pre><code class="python" algo="ricerca_binaria_iterativa"></code></pre>
-<h4>Traccia dell’esecuzione</h4>
+<h4 id="traccia-dellesecuzione">Traccia dell’esecuzione</h4>
 <div class="pytutorVisualizer" data-tracefile="./tracce/ricerca_binaria_iterativa_tracce.json" data-params="{'embeddedMode': true,'startingInstruction': 5}" id="ricerca_binaria_iterativa_tracce"> </div>
-<h2>Realizzazione ricorsiva</h2>
-<h3>In pseudo-codice</h3>
+<h2 id="realizzazione-ricorsiva">Realizzazione ricorsiva</h2>
+<h3 id="in-pseudo-codice-2">In pseudo-codice</h3>
 <pre><code class="pseudo" algo="ricerca_binaria_ricorsiva"></code></pre>
-<h3>Come diagramma di flusso</h3>
+<h3 id="come-diagramma-di-flusso">Come diagramma di flusso</h3>
 <p><img src="./codice/ricerca_binaria_ricorsiva.fc.svg" alt=""></p>
-<h3>In JavaScript</h3>
+<h3 id="in-javascript-2">In JavaScript</h3>
 <pre><code class="javascript" algo="ricerca_binaria_ricorsiva"></code></pre>
-<h3>In Python</h3>
+<h3 id="in-python-2">In Python</h3>
 <pre><code class="python" algo="ricerca_binaria_ricorsiva"></code></pre>
-<h4>Traccia dell’esecuzione</h4>
+<h4 id="traccia-dellesecuzione-2">Traccia dell’esecuzione</h4>
 <div class="pytutorVisualizer" data-tracefile="./tracce/ricerca_binaria_ricorsiva_tracce.json" data-params='{"embeddedMode": true, "jumpToEnd": true' id="ricerca_binaria_ricorsiva_tracce"> </div>
-<h2>Complessità</h2>
-<h3>Caso migliore</h3>
+<h2 id="complessita">Complessità</h2>
+<h3 id="caso-migliore">Caso migliore</h3>
 <p>Numero confronti: 1</p>
-<h3>Caso peggiore</h3>
+<h3 id="caso-peggiore">Caso peggiore</h3>
 <p>Numero confronti: \( p \) tale che \( 2^{p-1} &lt; n \leq 2^p \)</p>
-<h3>Caso medio</h3>
+<h3 id="caso-medio">Caso medio</h3>
 <p>Numero confronti:  \( p \) tale che \( 2^{p-1} &lt; n \leq 2^p \)</p>
 
-    <script>
-renderMathInElement(document.body);
-var algos = [];
-document.querySelectorAll('pre > code').forEach(function (e) {
-  if (e.attributes['algo'] && algos.indexOf(e.attributes['algo'].value) == -1) {
-    algos.push(e.attributes['algo'].value);
-  }
-});
-algos.forEach(function (algo) {
-    [{ lang: 'pseudo', ext: 'pseudo' }, { lang: 'javascript', ext: 'js' }, { lang: 'python', ext: 'py' }].forEach(function (impl) {
-        var filename = algo + '.' + impl.ext;
-        var url = './codice/' + filename;
-        fetch(url).then(function(response) {
-            return response.text();
-          }).then(function(src) {
-            var sel = 'code[algo="' + algo + '"][class="' + impl.lang + '"]';
-            var elem = document.querySelector(sel);
-            elem.innerText = src;
-            hljs.highlightBlock(elem);
-       });
+<script>
+    renderMathInElement(document.body);
+    var algos = [];
+    document.querySelectorAll('pre > code').forEach(function (e) {
+        if (e.attributes['algo'] && algos.indexOf(e.attributes['algo'].value) == -1) {
+            algos.push(e.attributes['algo'].value);
+        }
     });
-});
-// Tracce con OPT
-createAllVisualizersFromHtmlAttrs();
-  </script>
+    algos.forEach(function (algo) {
+        [{ lang: 'pseudo', ext: 'pseudo' }, { lang: 'javascript', ext: 'js' }, { lang: 'python', ext: 'py' }].forEach(function (impl) {
+            var filename = algo + '.' + impl.ext;
+            var url = './codice/' + filename;
+            fetch(url).then(function (response) {
+                return response.text();
+            }).then(function (src) {
+                var sel = 'code[algo="' + algo + '"][class="' + impl.lang + '"]';
+                var elem = document.querySelector(sel);
+                elem.innerText = src;
+                hljs.highlightBlock(elem);
+            });
+        });
+    });
+    // Tracce con OPT
+    createAllVisualizersFromHtmlAttrs();
+</script>
 
 </body>
+
 </html>
