--- a/appunti/database/sql/verifica_sql/index.html
+++ b/appunti/database/sql/verifica_sql/index.html
@@ -16,15 +16,16 @@
         }
     </style>
     <link rel="stylesheet" href="lib/pagina.css" type="text/css">
-    <link rel="stylesheet" href="node_modules/codemirror/lib/codemirror.css" type="text/css">
-    <link rel="stylesheet" href="node_modules/codemirror/addon/hint/show-hint.css">
-    <link rel="stylesheet" href="node_modules/codemirror/addon/scroll/simplescrollbars.css">
+    <link rel="stylesheet" href="lib/codemirror.css" type="text/css">
+    <link rel="stylesheet" href="lib/show-hint.css">
+    <link rel="stylesheet" href="lib/simplescrollbars.css">
     <script src="node_modules/codemirror/lib/codemirror.js" type="text/javascript"></script>
     <script src="node_modules/codemirror/addon/scroll/simplescrollbars.js"></script>
     <script src="node_modules/codemirror/addon/selection/selection-pointer.js"></script>
     <script src="node_modules/codemirror/addon/hint/show-hint.js"></script>
     <script src="node_modules/codemirror/addon/hint/sql-hint.js"></script>
     <script src="node_modules/codemirror/mode/sql/sql.js"></script>
+    <script src='node_modules/sql.js/js/sql.js'></script>
 </head>
 
 <body>
@@ -61,7 +62,7 @@
                 <button id="invia">Invia</button>
             </div>
         </div>
-        <script src="bundle.js" async></script>
+        <script src="dist/bundle.js" async></script>
     </div>
 </body>
 
