--- a/appunti/database/sql/verifica_sql/index.html
+++ b/appunti/database/sql/verifica_sql/index.html
@@ -16,16 +16,16 @@
         }
     </style>
     <link rel="stylesheet" href="lib/pagina.css" type="text/css">
-    <link rel="stylesheet" href="lib/codemirror.css" type="text/css">
-    <link rel="stylesheet" href="lib/show-hint.css">
-    <link rel="stylesheet" href="lib/simplescrollbars.css">
-    <script src="node_modules/codemirror/lib/codemirror.js" type="text/javascript"></script>
-    <script src="node_modules/codemirror/addon/scroll/simplescrollbars.js"></script>
-    <script src="node_modules/codemirror/addon/selection/selection-pointer.js"></script>
-    <script src="node_modules/codemirror/addon/hint/show-hint.js"></script>
-    <script src="node_modules/codemirror/addon/hint/sql-hint.js"></script>
-    <script src="node_modules/codemirror/mode/sql/sql.js"></script>
-    <script src='node_modules/sql.js/js/sql.js'></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.43.0/codemirror.min.css" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.43.0/addon/hint/show-hint.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.43.0/addon/scroll/simplescrollbars.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.43.0/codemirror.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.43.0/addon/scroll/simplescrollbars.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.43.0/addon/selection/selection-pointer.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.43.0/addon/hint/show-hint.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.43.0/addon/hint/sql-hint.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.43.0/mode/sql/sql.min.js"></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/sql.js/0.5.0/js/sql-optimized.js'></script>
 </head>
 
 <body>
