Modifiche varie per tentare di ripristinare il cambio di font e altezza

--- a/appunti/database/sql/verifica_sql/index.html
+++ b/appunti/database/sql/verifica_sql/index.html
@@ -8,29 +8,29 @@
     <!-- OpenDyslexic CSS -->
     <link id="opendyslexic-fonts" rel="stylesheet" href="lib/fonts.css" type="text/css" disabled>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-        crossorigin="anonymous">
+    <!-- link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+        crossorigin="anonymous"-->
     <!-- CSS personalizzato -->
     <link rel="stylesheet" href="lib/pagina.css" type="text/css">
     <!-- Codemirror CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.43.0/codemirror.min.css" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.43.0/addon/hint/show-hint.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.43.0/addon/scroll/simplescrollbars.min.css">
+    <!-- link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.43.0/addon/scroll/simplescrollbars.min.css" -->
     <!-- JQuery (opzionale) -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
     <!-- Popper (opzionale) -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
+    <!-- script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script-->
     <!-- Bootstrap -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
+    <!--script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script-->
     <!-- CodeMirror -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.43.0/codemirror.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.43.0/addon/scroll/simplescrollbars.min.js"></script>
+    <!-- script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.43.0/addon/scroll/simplescrollbars.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.43.0/addon/selection/selection-pointer.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.43.0/addon/hint/show-hint.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.43.0/addon/hint/sql-hint.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.43.0/addon/hint/sql-hint.min.js"></script-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.43.0/mode/sql/sql.min.js"></script>
     <!-- SQL, per correzione -->
     <script src='https://cdnjs.cloudflare.com/ajax/libs/sql.js/0.5.0/js/sql-optimized.js'></script>
@@ -42,13 +42,12 @@
 
         .CodeMirror * {
             font-family: monospace;
-            border: 1px solid #eee;
-            height: auto;
+            /*border: 1px solid #eee;*/
         }
-        .CodeMirror-scroll {
+        /*.CodeMirror-scroll {
             overflow-y: hidden;
             overflow-x: auto;
-        }
+        }*/
     </style>
 </head>
 
